--- a/Eksamensmappa/css/style.css
+++ b/Eksamensmappa/css/style.css
@@ -1,5 +1,5 @@
 /* Import Roboto fra Google Fonts */
-@import url('"https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 /*setter font for sidene, og maks bredde på 1200px*/
 body {
@@ -237,12 +237,6 @@ main {
     border: 2.5px solid black;  /*svart border rundt produkt knapper*/
     border-radius: 50px;
     padding: 0.5rem;
-    background-color: white;
-}
-
-.btn-product:nth-child(1){
-    background-color: black;
-    color: white;
 }
 
 /*"En smakebit.." tekst får mer plass*/
@@ -430,7 +424,7 @@ main {
 /*individuelle anmeldelser*/
 .customer-review-profile {
     background-color: white;
-    border: 1px solid #e0e0e0;
+    border: 1px solid black;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 1%;
@@ -438,7 +432,7 @@ main {
     margin: 1%;
     height: 375px;
     min-width: 250px; 
-    max-width: 300px; 
+    max-width: 289px; 
 }
 
 /*profilbilde*/
@@ -588,6 +582,12 @@ main {
     border: none;
     cursor: pointer;
     width: 100%;
+}
+
+caption{
+    font-weight:  bold;
+    font-size: 1.2rem;
+    border-bottom: 2px black solid;
 }
 
 .buttons {
@@ -751,6 +751,313 @@ details p {
 
 .review-1 h4{
     font-size: 1.2rem;
+}
+
+/*------------------------------------------------*/
+
+.main-checkout{
+    padding: 1rem;
+    margin: 0;
+}
+
+.back-to-main{
+    font-size: 1rem;
+    text-align: left;
+}
+
+#shopping-bag{
+    text-align: left;
+}
+
+#shopping-bag h2{
+    padding-left: 2.5rem;
+}
+
+.checkout-product img{
+    max-width: 200px;
+    width: 100%;
+}
+.checkout-product{
+    text-align: left;
+    width: 100%;
+}
+
+.product-info-checkout h3{
+    font-size: 20px;
+}
+
+.product-info-checkout{
+    padding-left: 2rem;
+}
+.product-info-checkout h3{
+    padding-top: 1rem;
+    margin: 0;
+}
+
+.product-info-checkout p{
+    padding: 0;
+    margin: 0;
+}
+
+/*styling*/
+.sizes {
+    padding: 0.8rem;
+    font-size: 14px;
+    background-color: #eeeeee;
+    cursor: pointer;
+    border: none;
+}
+
+/*mer styling*/
+.number-of {
+    cursor: pointer;
+    border: none;
+    max-width: 60px;
+    display: flex;
+    margin-left: 1rem;
+}
+
+.number-of input{
+    max-width: 40px;
+    background-color: white;
+    border: none;
+    margin-left: 1rem;
+}
+
+.size-and-number{
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: row; 
+    align-items: baseline;   
+}
+
+.size-section{
+    display: flex;
+    flex-direction: row; 
+    align-items: center;   
+}
+
+.shopping-bag-icons{
+    display: flex;
+    flex-direction: row; 
+    justify-content: left;
+    padding-left: 1rem;
+}
+
+.shopping-bag-icons i{
+    padding-left: 1rem;
+    font-size: 20px;
+    padding-bottom: 1rem;
+}
+
+.personal-information {
+    margin: 20px;
+    text-align: left;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 20px; /*spacing mellom forms */
+}
+
+form label {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+/*input styling*/
+form input {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+/*button seksjon*/
+.btn-personal-information {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.btn-personal-information button {
+    padding: 10px 20px;
+    font-size: 14px;
+    color: white;
+    background-color: black;
+    border: none;
+    border-radius: 4px;
+}
+
+.btn-personal-information a {
+    padding: 10px 20px;
+    font-size: 14px;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.delivery {
+    text-align: left;
+}
+
+.delivery h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.delivery h4 {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.delivery h5 {
+    font-size: 15px;
+    margin: 0.5rem;
+
+}
+
+/*generel tilpassing for hver delivery-option */
+.delivery-option {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
+}
+
+.delivery-option p {
+    text-align: left;
+    margin: 0;
+}
+
+.items-in-cart,
+.personal-information,
+.delivery-border,
+.payment {
+    border: 2px solid #eeeeee;
+    padding: 1rem; 
+    margin: 2rem 0; 
+    width: 100%; 
+    box-sizing: border-box; 
+    
+}
+
+.main-checkout {
+    display: flex;
+    flex-direction: column; /*stacker seksjoner vertikalt*/
+    padding: 1rem; /*invendig padding */
+    margin: 0 auto;
+}
+
+.items-checkout {
+    gap: 1rem;
+    margin-bottom: 1rem; /*adder plass under raden*/
+}
+
+.option-delivery{
+    display: flex;
+    flex-direction: row;
+}
+
+.price-delivery{
+    display: flex;
+    flex-direction: row;
+}
+
+.delivery-time{
+    font-weight: bold;
+    color: gray;
+}
+
+.top-delivery p {
+    font-size: 14px;
+    margin: 0;
+    white-space: nowrap; /*beholder prisen på linja*/
+}
+
+.top-delivery i {
+    font-size: 15px;
+    color: #555;
+    padding-left: 0.5rem;
+}
+
+.card{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.card h5{
+    font-size: 20px;
+    margin: 0;
+}
+
+.card i {
+    padding-left: 1rem;
+}
+
+.payment{
+    text-align: left;
+    padding: 1rem;
+}
+
+.finish-payment{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.finish-payment #cost{
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.finish-payment p{
+    margin: 0;
+}
+
+.finish-payment button {
+    padding: 10px 20px;
+    font-size: 14px;
+    color: #fff;
+    background-color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom:1rem ;
+}
+
+.finish-payment #confirm{
+    text-align: center;
+}
+
+
+.news{
+    text-align: center;
+    padding-top: 1rem;
+}
+
+
+.extra-choices{
+    align-items: baseline;
+}
+
+.extra-choices input{
+    max-width: 20px;
+}
+
+.extra-choices label{
+    font-weight: lighter;
 }
 
 
@@ -1134,6 +1441,198 @@ input:not(:placeholder-shown):invalid + .error-message {
     }
 
 /*-------------------------------------------*/
+
+
+    .main-checkout {
+        align-items: center;
+        margin: 0 auto; /*sentrer horisontalt*/
+        text-align: left;
+        gap: 2rem;
+
+    }
+
+    .checkout {
+        display: flex;
+        flex-direction: column; /*legger innhold vertikalt automatisk*/
+        gap: 2rem;
+    }
+
+    .checkout-product {
+        display: flex; 
+        align-items: flex-start; 
+        gap: 1.5rem;
+    }
+
+    .checkout-product img {
+        max-width: 150px; /*spesefik img size*/
+        height: auto;
+    }
+
+    .product-info-checkout {
+        flex: 1;
+    }
+
+    .items-checkout{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .items-in-cart,
+    .personal-information,
+    .delivery-border,
+    .payment {
+        border: 2px solid white;
+        padding: 1rem; /*legger til invending spacing */
+        margin: 0rem;
+        width: 900px;
+    }
+
+    .delivery-option {
+        flex-direction: row;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .top-delivery {
+        display: flex;
+        flex: 1;
+    }
+
+    .price-delivery {
+        text-align: right; /*setter prisen på høyre*/
+    }
+
+    .finish-payment {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    .finish-payment button {
+        width: 100%;
+        padding: 1rem; /*padding gjør den større*/
+    }
+
+    .date-cvc{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .date-or-cvc{
+        display: flex;
+        flex-direction: column;
+        width: 49%;
+    }
+
+    .delivery-option{
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
+    
+    /*generelt delivery-option styling*/
+    .delivery-option {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid #ccc; /*border for hvert valg*/
+        border-radius: 8px;
+        padding: 15px;
+        margin-bottom: 15px; /*mellomrom mellom valga*/
+    }
+
+    /*mer styling*/
+    .top-delivery {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        width: 100%;
+    }
+
+    .option-delivery {
+        gap: 10px;
+        flex: 1; 
+    }
+
+    .option-delivery h5 {
+        font-size: 16px;
+        font-weight: bold;
+        margin: 0;
+    }
+
+    /*pris og ikon*/
+    .price-delivery {
+        display: flex;
+        align-items: center;
+        gap: 5px; /*space mellom pris og ikon*/
+    }
+
+    .price-delivery i {
+        font-size: 18px;
+        color: #555;
+    }
+
+    .delivery-and-time{
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
+
+    .price-delivery{
+        display: flex;
+        flex-direction: row;
+    }
+
+
+    .label-input{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .name{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .postnr-place{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+    .first-name, .last-name, .postnumber, .place{
+        width: 49%;
+    }
+
+    .checkout h1{
+        font-size: 40px;
+        text-align: center;
+    }
+
+
+    .shopping-bag-icons{
+        display: flex;
+        flex-direction: column; 
+
+    }
+
+
+    .items-checkout{
+        display: flex;
+        flex-direction: row; 
+
+    }
+
+    .size-and-number{
+        display: flex;
+        flex-direction: row; 
+
+    }
+
+
+/*---------------------------------------*/
+
 
     #global-footer{
         background-color: #dcdcdc;
